iptables
# Generated by iptables-save v1.4.7 on Wed Dec 26 09:01:36 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 192.168.6.65/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.6.74/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 192.168.6.111/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.6.127/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.6.149/32 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -j LOG --log-prefix "Drop inboud" 
-A INPUT -j DROP 
-A FORWARD -j LOG --log-prefix "Drop forward" 
-A FORWARD -j DROP 
-A OUTPUT -d 10.30.160.41/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 514,5044,6379,9092 -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p icmp -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -d 192.168.4.222/32 -j ACCEPT 
-A OUTPUT -d 192.168.4.206/32 -j ACCEPT
-A OUTPUT -d 192.168.5.8/32 -j ACCEPT 
-A OUTPUT -d 192.168.40.2/32 -j ACCEPT 
-A OUTPUT -d 10.30.160.41/32 -p udp -m state --state NEW -m udp -m multiport --dports 514 -j ACCEPT 
-A OUTPUT -d 10.30.160.41/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 514,5044,6379,9092 -j ACCEPT 
-A OUTPUT -d 10.60.97.12/32 -p udp -m state --state NEW -m udp -m multiport --dports 514,1514 -j ACCEPT 
-A OUTPUT -d 10.30.160.44/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 80,443,4505,4506,6379 -m comment --comment "Connect to SIRC - ServerEndpoint" -j ACCEPT 
-A OUTPUT -j LOG --log-prefix "Drop forward" 
-A OUTPUT -j DROP 
COMMIT
# Completed on Wed Dec 26 09:01:36 2018
